# DRL-for-screw-fastening

./: README.md
drl_agent/: CMakeLists.txt  package.xml
drl_agent/config/: main_config.yaml
drl_agent/launch/: evaluation.launch  training.launch
drl_agent/src/: agent_evaluation.py  agent_training.py  controller_manager_connection.py  gazebo_connection.py  gazebo_simulation_master.py  robot_connection.py  training_environment.py
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: cartesian_impedance_controller.yaml  position_control.yaml
robot_control/launch/: cart_impedance_controller.launch  control.launch  position_controller.launch
robot_control/src/robot_control/: config_impedance_controller.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: macro.gazebo.xacro  macro.transmission.xacro
robot_description/launch/: m1013.launch
robot_description/meshes/m1013_collision/: tcp_screwdriver_connector.stl
robot_description/meshes/m1013_white/: bit_meshed.stl
robot_description/rviz/: default.rviz
robot_description/xacro/: m1013.urdf.xacro  macro.m1013.white.xacro
robot_sim/: CMakeLists.txt  package.xml
robot_sim/launch/: empty_world.launch  m1013_gazebo_rviz.launch
robot_sim/models/lamp_model/: model.config  model.sdf
robot_sim/models/lamp_model/meshes/: lamp_2.stl  workpiece_meshed.stl
robot_sim/models/screw_model/: model.config  model.sdf
robot_sim/src/robot_sim/: euler_quaternion.py  simulation_model_setup.py
robot_sim/worlds/: zero_gravity.world
